<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:background="@color/ffffff"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:id="@+id/profile_photo"
        android:contentDescription="@string/profile"
        android:src="@drawable/profilephoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="36dp"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo"
        android:layout_marginTop="32dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/Edit_name"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo"
        app:layout_constraintStart_toEndOf="@+id/Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/Name"
        app:layout_constraintEnd_toEndOf="parent"
        android:ems="10"
        android:hint="@string/enter_your_full_names"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yob"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/y_o_b"
        android:layout_marginStart="36dp"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        android:layout_marginTop="32dp"
        />
    
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/Edit_name"
        app:layout_constraintStart_toEndOf="@+id/yob"
        app:layout_constraintBaseline_toBaselineOf="@+id/yob"
        app:layout_constraintEnd_toEndOf="parent"
        android:ems="10"
        android:id="@+id/y.o.b"
        android:importantForAutofill="no"
        android:hint="@string/enter_year_of_birth"
        android:inputType="text|date"
        android:textColor="@color/black"
        />
    
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/terms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/y.o.b"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tc"
        app:layout_constraintStart_toStartOf="@+id/terms"
        android:text="@string/accept_terms_and_conditions"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/y.o.b"
        android:layout_marginTop="50dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/terms"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tc"
        android:layout_marginTop="30dp"
        android:text="@string/calculate_age"
        android:onClick="age"
        />


</androidx.constraintlayout.widget.ConstraintLayout>